<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/img_sportmode_summary_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_px_40_y"
        android:text="@string/string_summary"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_30pt"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/dp_px_220_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_70_x"
        android:layout_marginTop="@dimen/dp_px_220_y"
        android:gravity="center|start"
        android:text="@string/string_common_time"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="@dimen/dp_px_220_x"
        android:layout_height="@dimen/dp_px_120_y"
        android:layout_marginStart="@dimen/dp_px_325_x"
        android:layout_marginTop="@dimen/dp_px_200_y"
        android:gravity="center|end"
        android:text="130:00"
        android:textColor="@color/yellow"
        android:textSize="@dimen/font_size_47pt" />

    <TextView
        android:id="@+id/tv_unit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_580_x"
        android:layout_marginTop="@dimen/dp_px_230_y"
        android:gravity="end"
        android:text="@string/string_summary_unit_min_sec"
        android:textColor="@color/textView_white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:layout_width="@dimen/dp_px_220_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_70_x"
        android:layout_marginTop="@dimen/dp_px_350_y"
        android:gravity="center|start"
        android:text="@string/string_common_distance"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="@dimen/dp_px_220_x"
        android:layout_height="@dimen/dp_px_120_y"
        android:layout_marginStart="@dimen/dp_px_325_x"
        android:layout_marginTop="@dimen/dp_px_330_y"
        android:gravity="center|end"
        android:text="10.5"
        android:textColor="@color/yellow"
        android:textSize="@dimen/font_size_47pt" />

    <TextView
        android:id="@+id/tv_unit_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_580_x"
        android:layout_marginTop="@dimen/dp_px_370_y"
        android:text="@string/string_unit_km"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:layout_width="@dimen/dp_px_220_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_70_x"
        android:layout_marginTop="@dimen/dp_px_500_y"
        android:gravity="center|start"
        android:text="@string/string_common_calories"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:id="@+id/tv_calories"
        android:layout_width="@dimen/dp_px_220_x"
        android:layout_height="@dimen/dp_px_120_y"
        android:layout_marginStart="@dimen/dp_px_325_x"
        android:layout_marginTop="@dimen/dp_px_480_y"
        android:gravity="center|end"
        android:text="1239.1"
        android:textColor="@color/yellow"
        android:textSize="@dimen/font_size_47pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_580_x"
        android:layout_marginTop="@dimen/dp_px_520_y"
        android:text="@string/string_unit_kcal"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />


    <TextView
        android:layout_width="@dimen/dp_px_350_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/summary_1"
        android:layout_marginTop="@dimen/dp_px_220_y"
        android:gravity="start|center"
        android:text="@string/string_avg_speed"
        android:textColor="@color/white"
        android:textSize="@dimen/summary_avg_speed" />

    <TextView
        android:id="@+id/tv_avg_speed"
        android:layout_width="@dimen/dp_px_200_x"
        android:layout_height="@dimen/dp_px_120_y"
        android:layout_marginStart="@dimen/dp_px_1200_x"
        android:layout_marginTop="@dimen/dp_px_200_y"
        android:gravity="right"
        android:text="24.9"
        android:textColor="@color/yellow"
        android:textSize="@dimen/font_size_47pt" />

    <TextView
        android:id="@+id/tv_unit_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_1430_x"
        android:layout_marginTop="@dimen/dp_px_230_y"
        android:text="@string/string_unit_kmh"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:layout_width="@dimen/dp_px_350_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/summary_1"
        android:layout_marginTop="@dimen/dp_px_350_y"
        android:gravity="start|center"
        android:text="@string/string_avg_incline"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:id="@+id/tv_avg_incline"
        android:layout_width="@dimen/dp_px_200_x"
        android:layout_height="@dimen/dp_px_120_y"
        android:layout_marginStart="@dimen/dp_px_1170_x"
        android:layout_marginTop="@dimen/dp_px_330_y"
        android:gravity="right"
        android:text="10"
        android:textColor="@color/yellow"
        android:textSize="@dimen/font_size_47pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_1500_x"
        android:layout_marginTop="@dimen/dp_px_370_y"
        android:text="@string/string_unit_percent"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:layout_width="@dimen/dp_px_350_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/summary_1"
        android:layout_marginTop="@dimen/dp_px_500_y"
        android:gravity="start|center"
        android:text="@string/string_avg_mets"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:id="@+id/tv_avg_mets"
        android:layout_width="@dimen/dp_px_200_x"
        android:layout_height="@dimen/dp_px_120_y"
        android:layout_marginStart="@dimen/dp_px_1170_x"
        android:layout_marginTop="@dimen/dp_px_480_y"
        android:gravity="right"
        android:text="10000"
        android:textColor="@color/yellow"
        android:textSize="@dimen/font_size_47pt" />

    <TextView
        android:layout_width="@dimen/dp_px_350_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/summary_1"
        android:layout_marginTop="@dimen/dp_px_640_y"
        android:gravity="start|center"
        android:text="@string/string_avg_pulse"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <TextView
        android:id="@+id/tv_avg_pulse"
        android:layout_width="@dimen/dp_px_200_x"
        android:layout_height="@dimen/dp_px_120_y"
        android:layout_marginStart="@dimen/dp_px_1170_x"
        android:layout_marginTop="@dimen/dp_px_620_y"
        android:gravity="right"
        android:text="120"
        android:textColor="@color/yellow"
        android:textSize="@dimen/font_size_47pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_1430_x"
        android:layout_marginTop="@dimen/dp_px_650_y"
        android:text="@string/string_unit_bpm"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_25pt" />

    <LinearLayout
        android:id="@+id/ly_score"
        android:layout_width="@dimen/dp_px_700_x"
        android:layout_height="@dimen/dp_px_120_y"
        android:layout_marginStart="@dimen/dp_px_70_x"
        android:layout_marginTop="@dimen/dp_px_610_y"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="@dimen/dp_px_250_x"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:text="@string/string_co2_max"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_21pt" />

        <TextView
            android:id="@+id/tv_grade"
            android:layout_width="@dimen/dp_px_200_x"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/string_summary_grade_1"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_size_21pt" />

        <TextView
            android:id="@+id/tv_vo2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp_px_5_y"
            android:text="78.227"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_size_30pt" />
    </LinearLayout>
</RelativeLayout>