<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_px_1920_x"
    android:layout_height="@dimen/dp_px_1080_x">

    <com.run.treadmill.widget.YaxisView
        android:id="@+id/yv_unit"
        android:layout_width="@dimen/dp_px_100_x"
        android:layout_height="@dimen/dp_px_450_y"
        android:layout_marginStart="@dimen/dp_px_300_x"
        android:layout_marginTop="@dimen/dp_px_292_y" />

    <ImageView
        android:id="@+id/img_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_250_x"
        android:layout_marginTop="@dimen/dp_px_238_y"
        android:src="@drawable/img_sportmode_profile_speed_calibration_km_1"
        android:visibility="gone" />

    <com.run.treadmill.widget.HistogramListView
        android:id="@+id/lineChartView"
        android:layout_width="@dimen/dp_px_1120_x"
        android:layout_height="@dimen/dp_px_500_y"
        android:layout_marginStart="@dimen/dp_px_400_x"
        android:layout_marginTop="@dimen/dp_px_242_y"
        android:visibility="visible"
        app:modeName="@string/string_mode_quick_start"
        app:txtSize="@dimen/font_size_16pt" />

    <TextView
        android:id="@+id/btn_line_chart_incline"
        android:layout_width="@dimen/dp_px_720_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_400_x"
        android:layout_marginTop="@dimen/dp_px_242_y"
        android:background="@drawable/tx_fillet_max_bg"
        android:gravity="center"
        android:text="@string/string_incline"
        android:textColor="@color/running_text_orange"
        android:textSize="@dimen/font_size_21pt"
        android:visibility="visible" />

    <TextView
        android:id="@+id/btn_line_chart_speed"
        android:layout_width="@dimen/dp_px_400_x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_px_1120_x"
        android:layout_marginTop="@dimen/dp_px_242_y"
        android:background="@drawable/tx_fillet_small_bg"
        android:gravity="center"
        android:text="@string/string_speed"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_size_21pt"
        android:visibility="visible" />
</RelativeLayout>
